--- a/src/themes/bright.scss
+++ b/src/themes/bright.scss
@@ -4,6 +4,7 @@ $bodyBackground: #fff;
 $menuBackground: #f5f5f5;
 $darkBackground: #ededed;
 $lightBackground: $menuBackground;
+$boxBorderColor: #e6e6e6;
 
 $bodyColor: #333;
 $linkColor: #196ea2;
@@ -28,13 +29,16 @@ $buttonBorderWidth: 1px;
 $buttonColor: #212121;
 $buttonColorActive: $buttonColor;
 $buttonColorDisabled: $buttonColor;
+$controlBackground: $darkBackground;
 $controlBackgroundActive: #fff;
+$controlBorderColor: $inputBorderColor;
+$controlBorderStyle: $inputBorderStyle;
+$controlBorderWidth: $inputBorderWidth;
 $controlColor: #555;
 $controlColorActive: #212121;
 $placeholderColor: #ababab;
 
 $iconsUrl: "img-bright.png";
-$boxBorderColor: #e6e6e6;
 $shadow: #d0d0d0 2px 2px 10px;
 $plannerSepColor: #d0d0d0;
 $suggestionSepColor: $plannerSepColor;
