--- a/src/themes/dark.scss
+++ b/src/themes/dark.scss
@@ -4,6 +4,7 @@ $bodyBackground: #192227;
 $menuBackground: #1f2c34;
 $darkBackground: #1a262a;
 $lightBackground: $menuBackground;
+$boxBorderColor: #2c323b;
 
 $bodyColor: #ababab;
 $linkColor: #d6d6d6;
@@ -13,7 +14,7 @@ $headerColor: $bodyColor;
 
 $inputBackground: #1a262a;
 $inputBackgroundActive: #182223;
-$inputBorderColor: #2c323b;
+$inputBorderColor: $boxBorderColor;
 $inputBorderColorActive: $inputBorderColor;
 $inputBorderStyle: solid;
 $inputBorderWidth: 1px;
@@ -28,13 +29,16 @@ $buttonBorderWidth: 1px;
 $buttonColor: #1a2d38;
 $buttonColorActive: $buttonColor;
 $buttonColorDisabled: $buttonColor;
+$controlBackground: $darkBackground;
 $controlBackgroundActive: #3a444a;
+$controlBorderColor: $inputBorderColor;
+$controlBorderStyle: $inputBorderStyle;
+$controlBorderWidth: $inputBorderWidth;
 $controlColor: $inputColor;
 $controlColorActive: #d0d2ab;
 $placeholderColor: #4f5458;
 
 $iconsUrl: "img-dark.png";
-$boxBorderColor: #2c323b;
 $shadow: #151515 2px 2px 10px;
 $plannerSepColor: #3a4450;
 $suggestionSepColor: #2c323b;
