Fix class name collision

--- a/src/themes/_themes.scss
+++ b/src/themes/_themes.scss
@@ -50,11 +50,11 @@ input:-ms-input-placeholder {
 	background-image: url($iconsUrl);
 }
 
-.dark {
+.dark-box {
 	background: $darkBackground;
 }
 
-.light {
+.light-box {
 	background: $lightBackground;
 }
 
