Switch to Webpack for bundling
This breaks IE8 compat due to missing Object.defineProperty support.

--- a/src/themes/bright.scss
+++ b/src/themes/bright.scss
@@ -38,7 +38,7 @@ $controlColor: #555;
 $controlColorActive: #212121;
 $placeholderColor: #ababab;
 
-$iconsUrl: "img-bright.png";
+$iconsUrl: "../img/img-bright.png";
 $shadow: #d0d0d0 2px 2px 10px;
 $plannerSepColor: #d0d0d0;
 $suggestionSepColor: $plannerSepColor;
