--- a/src/themes/dark.scss
+++ b/src/themes/dark.scss
@@ -38,7 +38,7 @@ $controlColor: $inputColor;
 $controlColorActive: #d0d2ab;
 $placeholderColor: #4f5458;
 
-$iconsUrl: "img-dark.png";
+$iconsUrl: "../img/img-dark.png";
 $shadow: #151515 2px 2px 10px;
 $plannerSepColor: #3a4450;
 $suggestionSepColor: #2c323b;
