--- a/src/themes/gold.scss
+++ b/src/themes/gold.scss
@@ -38,7 +38,7 @@ $controlColor: $inputColor;
 $controlColorActive: $buttonColorActive;
 $placeholderColor: #6b5e3f;
 
-$iconsUrl: "img-gold.png";
+$iconsUrl: "../img/img-gold.png";
 $shadow: #151515 2px 2px 10px;
 $plannerSepColor: #463d28;
 $suggestionSepColor: #302b28;
