--- a/src/themes/neon.scss
+++ b/src/themes/neon.scss
@@ -38,7 +38,7 @@ $controlColor: $buttonColor;
 $controlColorActive: $buttonColorActive;
 $placeholderColor: #0a6d76;
 
-$iconsUrl: "img-neon.png";
+$iconsUrl: "../img/img-neon.png";
 $shadow: #151515 2px 2px 10px;
 $plannerSepColor: #403d6c;
 $suggestionSepColor: $inputBorderColor;
